# wetalk-rs

./: .env  .gitignore  Cargo.toml  config.json  wetalk.sql
entity/: participant_table.rs
src/: controller.rs  main.rs
src/controller/: data_base.rs
src/controller/data_base/: model.rs
src/controller/data_base/model/: message_table.rs  prelude.rs  room_table.rs
static/: chat.html  index.html  login.html
static/upload/: 37415ede-fb9c-4ae2-bf7c-ea0b602e2d73.cpp  60d48bea-0555-40b1-84d7-45c288a27894.cpp  be4e2d55-b91e-425b-9bf2-7fb7918df018.txt  e81daae0-ba9e-43fc-8f23-b4ccc72eeaa1.yml  fe57f20f-75cd-455a-8f3b-2be3b71deb3b.cpp
www/: chat.html  index.html
